--- a/XDBF/achievementviewer.ui
+++ b/XDBF/achievementviewer.ui
@@ -27,7 +27,7 @@
           </size>
          </property>
          <property name="text">
-          <string>&lt;b&gt;Gamerscore: &lt;/b&gt;</string>
+          <string>&lt;b&gt;Gamerscore: &lt;b&gt;</string>
          </property>
          <property name="wordWrap">
           <bool>true</bool>
