--- a/XDBF/newentrychooser.ui
+++ b/XDBF/newentrychooser.ui
@@ -19,63 +19,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QComboBox" name="comboBox">
-         <item>
-          <property name="text">
-           <string>Achievement</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Image</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - Int32</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - Int64</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - Double</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - String</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - Float</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - Binary</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Setting - DateTime</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>Title</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>String</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="comboBox"/>
        </item>
       </layout>
      </item>
